modul, min start

--- a/gameslave.html
+++ b/gameslave.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="jquery/jquery.js"></script>
 <script type="text/javascript" src="gmlib/libcoffee.js"></script>
 <script type="text/javascript" src="gameslave.js"></script>
+<script type="text/javascript" src="mod/xorbit.js"></script>
 <script>
 </script>
 </head><body>
@@ -22,6 +23,7 @@ launch:
 </ul>
 </li>
 </ul>
-<pre id="out"></pre>
+<div id="out"></div>
+<pre id="diag"></pre>
 <div id="wh"></div>
 </body></html>
